update input border

--- a/less/main.less
+++ b/less/main.less
@@ -254,18 +254,18 @@ p {
 				height: 2.5rem;
 				margin: 0.5rem 0 0.75rem 0;
 				padding-left: 0.25rem;
+				border: none;
 			}
-			a {
+			button {
 				display: flex;
 				justify-content: center;
 				align-items: center;
 				width: 66.6666667vw;
 				height: 2.5rem;
 				background-color: @color_2;
-				p {
-					color: @color_4;
-					font-size: 1.25rem;
-				}
+				color: @color_4;
+				font-size: 1.25rem;
+				border: none;
 			}
 
 		}
@@ -396,12 +396,14 @@ p {
 			height: 2.5rem;
 			padding-left: 0.25rem;
 			margin-top: 0.25rem;
+			border: 1px solid @color_3;
 		}
 		textarea {
 			margin-top: 0.25rem;
 			width: 100%;
 			height: 10rem;
 			resize : none;
+			border: 1px solid @color_3;
 		}
 		label {
 			display: inline-block;
