--- a/less/main.less
+++ b/less/main.less
@@ -202,6 +202,9 @@ p {
 		}
 	}
 	.newitem {
+		.newitem-intro {
+			display: none;
+		}
 		.newitem-content {
 			display: flex;
 			flex-direction: column;
@@ -780,6 +783,39 @@ p {
 				display: flex;
 				justify-content: center;
 				align-items: center;
+			}
+			.newitem-img {
+				position: relative;
+			}
+			.newitem-intro {
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
+				position: absolute;
+				bottom: 0;
+				top: 0;
+				right: 0;
+				left: 0;
+				background-color: rgba(0, 0, 0, 0);
+				p {
+					display: inline-block;
+					font-size: 3rem;
+					color: rgba(0, 0, 0, 0);
+				}
+				p:nth-child(1) {
+					padding: 1rem 0;
+					font-size: 3.5rem;
+					font-weight: 800;
+				}
+				&:hover {
+					background-color: rgba(0, 0, 0, 0.8);
+					transition: all .3s;
+					p {
+						color: @color_4;
+						transition: all .3s;
+					}
+				}
 			}
 			.newitem-content {
 				height: 40.25rem;
