--- a/less/main.less
+++ b/less/main.less
@@ -763,6 +763,56 @@ p {
 			display: none;
 		}
 	}
+	.fixedheader {
+		display: none;
+		position: fixed;
+		top: 0;
+		right: 0;
+		left: 0;
+		z-index: 2;
+		padding: 0.75rem 0;
+		background-color: #E5E5E5;
+		&.active {
+			display: inline-block;
+		}
+		.logo {
+			width: 83px;
+		}
+		.nav-left,.nav-right {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+		.home,.aboutus,.newmenu,.reservation {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
+			align-items: center;
+			width: 7rem;
+			height: 5rem;
+			&:hover {
+				.icon,.name {
+					color: @color_5;
+					transition: all .2s;
+				}
+			}
+		}
+		.icon {
+			font-size: 2.5rem;
+			font-weight: 800;
+			color: @color_1;
+		}
+		.name {
+			font-size: 1.25rem;
+			font-weight: 800;
+			color: @color_1;
+		}
+		.nav-line {
+			width: 1px;
+			height: 5rem;
+			background-color: @color_3;
+		}
+	}
 
 	#content {
 		>div {
@@ -800,12 +850,12 @@ p {
 				background-color: rgba(0, 0, 0, 0);
 				p {
 					display: inline-block;
-					font-size: 3rem;
+					font-size: 2rem;
 					color: rgba(0, 0, 0, 0);
 				}
 				p:nth-child(1) {
 					padding: 1rem 0;
-					font-size: 3.5rem;
+					font-size: 2.5rem;
 					font-weight: 800;
 				}
 				&:hover {
