--- a/less/main.less
+++ b/less/main.less
@@ -37,18 +37,18 @@ a {
 }
 
 h1 {
-	font-size: 2.25rem;
+	font-size: 2rem;
 	margin: 0;
 	padding: 0.75rem 0;
 }
 
 h2 {
-	font-size: 1.75rem;
+	font-size: 1.5rem;
 }
 
 p {
 	margin: 0;
-	font-size: 1.25rem;
+	font-size: 1rem;
 	line-height: 1.5;
 	letter-spacing: 0.5px;
 }
@@ -161,7 +161,7 @@ p {
 }
 
 #header {
-	padding: 1.25rem 0;
+	margin: 0.75rem 0;
 	.logo {
 		width: 63px;
 	}
@@ -286,6 +286,10 @@ p {
 	}
 	.delicious {
 		margin-top: 0;
+		h1 {
+			padding: 1rem 0;
+			font-size: 1.75rem;
+		}
 	}
 	.coffee {
 		.container {
@@ -305,8 +309,8 @@ p {
 			a {
 				display: inline-block;
 				margin: 2.5rem 0 1rem 0;
-				padding: 0.5rem 1.25rem;
-				font-size: 1.75em;
+				padding: 0.5rem 1rem;
+				font-size: 1.25em;
 				font-weight: 800;
 				color: @color_1;
 				background-color: @color_4;
@@ -334,8 +338,8 @@ p {
 			a {
 				display: inline-block;
 				margin: 2.5rem 0 1rem 0;
-				padding: 0.5rem 1.25rem;
-				font-size: 1.75em;
+				padding: 0.5rem 1rem;
+				font-size: 1.25em;
 				font-weight: 800;
 				color: @color_1;
 				background-color: @color_4;
@@ -425,11 +429,11 @@ p {
 				margin-top: 0.5rem;
 			}
 			.meal-name {
-				font-size: 1.75rem;
+				font-size: 1.5rem;
 				font-weight: 800;
 			}
 			.meal-price {
-				font-size: 1.75rem;
+				font-size: 1.5rem;
 			}
 		}
 		.main-meal,.salad,.dessert,.soup,.drink,.snack {
@@ -449,7 +453,7 @@ p {
 			width: 100%;
 			height: 2.5rem;
 			padding-left: 0.25rem;
-			margin-top: 0.25rem;
+			margin-top: 0.5rem;
 			border: 1px solid @color_3;
 		}
 		textarea {
@@ -539,7 +543,7 @@ p {
 	}
 	
 	#header {
-		margin: 1.75rem 0;
+		margin: 1.5rem 0;
 		.logo {
 			width: 83px;
 		}
@@ -658,6 +662,9 @@ p {
 			margin: 7.5rem auto;
 			.center-block {
 				width: 600px;
+				h1 {
+					font-size: 1.5rem;
+				}
 				input {
 					width: 500px;
 					padding-left: 0.5rem;
@@ -675,6 +682,8 @@ p {
 				margin-top: 3.25rem;
 			}
 			h1 {
+				padding: 0.75rem 0;
+				font-size: 2rem;
 				text-align: center;
 			}
 		}
@@ -693,8 +702,8 @@ p {
 				width: 388px;
 				height: 447px;
 				top: 100px;
-				a {
-					width: 187px;
+				h1 {
+					font-size: 2rem;
 				}
 			}
 			.coffee-image {
@@ -722,8 +731,8 @@ p {
 				height: 447px;
 				top: 100px;
 				left: 312px;
-				a {
-					width: 187px;
+				h1 {
+					font-size: 2rem;
 				}
 			}
 			.comfortable-image {
@@ -737,6 +746,11 @@ p {
 			.googlemap iframe{
 				width: 28rem;
 				height: 25rem;
+			}
+			.location-content {
+				p {
+					font-size: 1.25rem;
+				}
 			}
 		}
 		.all-meal {
@@ -775,7 +789,7 @@ p {
 	}
 	
 	#header {
-		margin: 1.75rem 0;
+		margin: 1.5rem 0;
 		.logo {
 			width: 83px;
 		}
@@ -877,7 +891,7 @@ p {
 			margin: 0 auto;
 		}
 		.intro {
-			margin-top: 10rem;
+			margin-top: 3.25rem;
 			.container {
 				width: 35.25rem;
 			}
@@ -951,7 +965,7 @@ p {
 				height: 18.75rem;
 				h1 {
 					padding: 0;
-					font-size: 2.25rem;
+					font-size: 2rem;
 				}
 				input {
 					width: 50rem;
@@ -977,6 +991,8 @@ p {
 				margin-top: 3.25rem;
 			}
 			h1 {
+				padding: 0.75rem 0;
+				font-size: 2.25rem;
 				text-align: center;
 			}
 		}
@@ -996,14 +1012,12 @@ p {
 				height: 736px;
 				top: 100px;
 				h1 {
-					font-size: 2.25rem;
+					font-size: 2rem;
 				}
-				a {
-					width: 187px;
-					&:hover {
-						background-color: @color_1;
-						color: @color_4;
-					}
+				a:hover {
+					background-color: @color_1;
+					color: @color_4;
+					transition: all .2s;
 				}
 			}
 			.coffee-image {
@@ -1032,14 +1046,12 @@ p {
 				top: 100px;
 				left: 512px;
 				h1 {
-					font-size: 2.25rem;
+					font-size: 2rem;
 				}
-				a {
-					width: 187px;
-					&:hover {
-						background-color: @color_5;
-						color: @color_4;
-					}
+				a:hover {
+					background-color: @color_5;
+					color: @color_4;
+					transition: all .2s;
 				}
 			}
 			.comfortable-image {
@@ -1055,7 +1067,7 @@ p {
 			margin-top: 16.25rem;
 			h1 {
 				padding-bottom: 2.25rem;
-				font-size: 3rem;
+				font-size: 2.25rem;
 			}
 			.googlemap {
 				padding-bottom: 2.25rem;
@@ -1066,20 +1078,14 @@ p {
 			}
 			.location-content {
 				p {
-					font-size: 1.5rem;
+					font-size: 1.25rem;
 				}
 			}
 		}
 		.item-bar {
-			a {
-				font-size: 1.5rem;
-				&:hover {
-					color: @color_5;
-					transition: all .2s;
-				}
-			}
-			.line {
-				height: 30px;
+			a:hover {
+				color: @color_5;
+				transition: all .2s;
 			}
 		}
 		.all-meal {
