update final header hight

--- a/less/main.less
+++ b/less/main.less
@@ -575,7 +575,7 @@ p {
 	#header {
 		margin: 1.5rem 0;
 		.logo {
-			width: 72px;
+			width: 83px;
 		}
 		.nav-left,.nav-right {
 			display: flex;
@@ -588,21 +588,21 @@ p {
 			justify-content: space-around;
 			align-items: center;
 			width: 7rem;
-			height: 70px;
+			height: 5rem;
 		}
 		.icon {
-			font-size: 2rem;
+			font-size: 2.5rem;
 			font-weight: 800;
 			color: @color_1;
 		}
 		.name {
-			font-size: 1rem;
+			font-size: 1.25rem;
 			font-weight: 800;
 			color: @color_1;
 		}
 		.nav-line {
 			width: 1px;
-			height: 70px;
+			height: 5rem;
 			background-color: @color_3;
 		}
 		.hamburger-menu {
@@ -899,7 +899,7 @@ p {
 	#header {
 		margin: 1.5rem 0;
 		.logo {
-			width: 72px;
+			width: 83px;
 		}
 		.nav-left,.nav-right {
 			display: flex;
@@ -912,7 +912,7 @@ p {
 			justify-content: space-around;
 			align-items: center;
 			width: 7rem;
-			height: 70px;
+			height: 5rem;
 			&:hover {
 				.icon,.name {
 					color: @color_5;
@@ -921,18 +921,18 @@ p {
 			}
 		}
 		.icon {
-			font-size: 2rem;
+			font-size: 2.5rem;
 			font-weight: 800;
 			color: @color_1;
 		}
 		.name {
-			font-size: 1rem;
+			font-size: 1.25rem;
 			font-weight: 800;
 			color: @color_1;
 		}
 		.nav-line {
 			width: 1px;
-			height: 70px;
+			height: 5rem;
 			background-color: @color_3;
 		}
 		.hamburger-menu {
