update new design

--- a/fontello-adb9d677/css/fontello-codes.css
+++ b/fontello-adb9d677/css/fontello-codes.css
@@ -2,6 +2,9 @@
 .icon-home:before { content: '\e800'; } /* '' */
 .icon-user:before { content: '\e801'; } /* '' */
 .icon-comment:before { content: '\e802'; } /* '' */
+.icon-award:before { content: '\e803'; } /* '' */
+.icon-coffee:before { content: '\f0f4'; } /* '' */
 .icon-food:before { content: '\f0f5'; } /* '' */
+.icon-thumbs-up-alt:before { content: '\f164'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
 .icon-facebook-squared:before { content: '\f308'; } /* '' */
