--- a/fontello-adb9d677/css/fontello.css
+++ b/fontello-adb9d677/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?17591773');
-  src: url('../font/fontello.eot?17591773#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?17591773') format('woff2'),
-       url('../font/fontello.woff?17591773') format('woff'),
-       url('../font/fontello.ttf?17591773') format('truetype'),
-       url('../font/fontello.svg?17591773#fontello') format('svg');
+  src: url('../font/fontello.eot?4500022');
+  src: url('../font/fontello.eot?4500022#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?4500022') format('woff2'),
+       url('../font/fontello.woff?4500022') format('woff'),
+       url('../font/fontello.ttf?4500022') format('truetype'),
+       url('../font/fontello.svg?4500022#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?17591773#fontello') format('svg');
+    src: url('../font/fontello.svg?4500022#fontello') format('svg');
   }
 }
 */
@@ -58,6 +58,9 @@
 .icon-home:before { content: '\e800'; } /* '' */
 .icon-user:before { content: '\e801'; } /* '' */
 .icon-comment:before { content: '\e802'; } /* '' */
+.icon-award:before { content: '\e803'; } /* '' */
+.icon-coffee:before { content: '\f0f4'; } /* '' */
 .icon-food:before { content: '\f0f5'; } /* '' */
+.icon-thumbs-up-alt:before { content: '\f164'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
 .icon-facebook-squared:before { content: '\f308'; } /* '' */
